1.添加集群，查寻可用主机节点 2.设置集群主从节点 3.查寻集群详情 4.集群移除主机节点
